# erc20-checker

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: check_allowance.py  revoke_batch.py  scan_wallet.py
src/erc20_checker/: __init__.py  allowance.py  chains.py  cli.py  common.py  revoke.py  risk.py  scanner.py
tests/: test_all.py
