[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erc20-checker"
version = "0.1.0"
description = "Scan ERC20 approvals, assess risk, and build revoke transactions — zero dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "counterfactual5"},
]
keywords = ["erc20", "approve", "allowance", "revoke", "ethereum", "evm", "security", "defi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Zero external dependencies — pure Python standard library only.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
